# tiny-serve

./: Cargo.toml  README.md
res/: 400.html  404.html  500.html  501.html  listing.html  listing_entry.html
src/: chunked_bufreader.rs  main.rs  peekable_bufreader.rs  response.rs
src/http/: flatten.rs  mod.rs  parser.rs  rule.rs
