[package]
name = "tiny-serve"
version = "0.1.0"
authors = ["matthew"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = { version = "1.6", features = ["attributes"] }
lazy_static = "1.4"
pin-project = "1.0"
chrono = "0.4"
